src/ui/search/search.module.scss
@import '../../assets/sass/index.scss';
.kui-search {
    .kui-dropdown__item {
        width: 100%;
    }

    .kui-input-search {
        position: absolute;
        bottom: $google-spacing;
        left: 50%;
        transform: translateX(-50%);
        color: calc-color(fade, $color-base, 30);
        cursor: pointer;

        &__placeholder {
            padding-left: $google-spacing;
            color: calc-color(fade, $color-base, 60);
            user-select: none;
        }

        .kui-select--disabled & {
            opacity: .3;
        }
    }

    .kui-input__item {
        padding-left: $google-spacing * 6;
    }
}

.kui-input--focus,
.kui-input--filled {
    .kui-input-search {
        left: $google-spacing * 2;
        transform: translateX(0);

        &__icon {
            color: $color-base;
            animation: animation_imput_search .3s ease forwards;
        }

        &__placeholder {
            display: none;
        }
    }
}

.kui-input:not(.kui-input--filled):not(.kui-input--focus) {
    .kui-input-search {
        animation: animation_imput_search .6s ease forwards;
    }
}

@keyframes animation_imput_search {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

